feat: bound media work and transfers